<resources>
    <string name="app_name">MoviiCat</string>
    <string name="title_favorite">Favorite</string>
    <string name="desc_poster">Poster</string>
    <string name="title_tv">TV</string>
    <string name="title_movie">Movie</string>
    <string name="text_separator">|</string>
    <string name="title_overview">Overview</string>
    <string name="search_hint">Search…</string>
    <string name="message_added_to_favorites">Added to Favorites</string>
    <string name="message_removed_from_favorites">Removed from Favorites</string>
    <string name="message_no_module">No Module</string>
    <string name="action_close">Close</string>
    <string name="message_no_data">No Data</string>
</resources>