<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="id.riverflows.moviicatexp.home.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_list_container"/>
    <fragment
        android:id="@+id/nav_search"
        android:name="id.riverflows.moviicatexp.home.tv.TvFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/fragment_list_container"/>
    <fragment
        android:id="@+id/nav_favorite"
        android:name="id.riverflows.favorite.ui.FavoriteContainerFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite_container"/>
</navigation>